@@ -1663,6 +1663,9 @@ UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=24401;
 -- Digested Caracoli (Quest: A Rare Bean (Id: 9800))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=24419;
 
+-- Feralfen Idol (Quest: Idols of the Feralfen (Id: 9787))
+UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=24422;
+
 -- Sporebat Eye (Quest: Gathering the Reagents (Id: 9801))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=24426;
 
